--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
   <link rel="stylesheet" href="style.css">
-</head>
+</head> 
 <body>
   <main class="notifications">
     <header class = "notifications__header">
@@ -84,7 +84,7 @@
       </section>     
 
       <!--this is just one notification  -->
-      <section class="notifications__container__item unread" id ="notification03">
+      <section class="notifications__container__item read" id ="notification03">
         <div class="notifications__container__item__avatar">
           <img src="assets/images/avatar-rizky-hasanuddin.webp" alt="" class="notificacion__container__item__avatar__img">
         </div>
@@ -169,8 +169,8 @@
 
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io/challenges/notifications-page-DqK5QAmKbC/hub/notifications-page-GArEbfrlJn" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.frontendmentor.io/profile/hernanruscica">Cesar Hernan Ruscica</a>.
   </div>
 
   <script src="scripts.js"></script>
